# ChangeLog for dev-db/hsqldb
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/ChangeLog,v 1.16 2006/07/22 22:02:17 nelchael Exp $

  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  hsqldb-1.7.3.1-r3.ebuild:
  ant_src_unpack -> src_unpack

  01 Jul 2006; Joshua Nichols <nichoj@gentoo.org> +hsqldb-1.7.3.1-r3.ebuild:
  Revision bump to support new Java system. Also addresses bug #137332

*hsqldb-1.7.3.1-r2 (27 Dec 2005)

  27 Dec 2005; Joshua Nichols <nichoj@gentoo.org>
  +files/server.properties-r1, +files/sqltool.rc-r1,
  +hsqldb-1.7.3.1-r2.ebuild:
  Addresses bug #111963. Fix contributed by Sir No <wiktorw@people.pl>. Also
  some cleanup.

  10 Jul 2005; Thomas Matthijs <axxo@gentoo.org> hsqldb-1.7.3.1-r1.ebuild:
  dep fix, cleanup

*hsqldb-1.7.3.1-r1 (04 Jun 2005)

  04 Jun 2005; Jan Brinkmann <luckyduck@gentoo.org> -hsqldb-1.7.3.1.ebuild,
  +hsqldb-1.7.3.1-r1.ebuild:
  Updated reference to servletapi-2.3, we dont install a versioned servletapi
  jar any longer.

  18 May 2005; Markus Rothe <corsair@gentoo.org> hsqldb-1.7.3.1.ebuild:
  Stable on ppc64

  06 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> hsqldb-1.7.3.1.ebuild:
  Stable on sparc

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org> -hsqldb-1.7.2.4.ebuild,
  hsqldb-1.7.3.1.ebuild:
  stable on amd64, x86 and ppc

  23 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> hsqldb-1.7.3.1.ebuild:
  Keyworded ~sparc wrt #84992

  13 Mar 2005; Markus Rothe <corsair@gentoo.org> hsqldb-1.7.3.1.ebuild:
  Added ~ppc64 to KEYWORDS

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> hsqldb-1.7.2.4.ebuild,
  hsqldb-1.7.3.1.ebuild:
  added missing jikes dependency.

*hsqldb-1.7.3.1 (19 Jan 2005)

  19 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> +hsqldb-1.7.3.1.ebuild:
  new upstream version. fixes bug #78640

  18 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> hsqldb-1.7.2.4.ebuild: