@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/Attic/hsqldb-1.7.3.1-r1.ebuild,v 1.4 2005/09/11 12:15:42 axxo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/Attic/hsqldb-1.7.3.1-r1.ebuild,v 1.5 2006/09/14 19:34:47 nichoj Exp $
 
 inherit java-pkg eutils
 
@@ -25,6 +25,7 @@ DEPEND=">=virtual/jdk-1.4
 S=${WORKDIR}/${PN}
 
 pkg_setup() {
+	java-pkg_pkg_setup
 	enewgroup hsqldb
 	enewuser hsqldb -1 /bin/sh /dev/null hsqldb
 }
