@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/Attic/hsqldb-1.7.3.1-r2.ebuild,v 1.1 2005/12/27 04:53:12 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/Attic/hsqldb-1.7.3.1-r2.ebuild,v 1.2 2006/09/14 19:34:47 nichoj Exp $
 
 inherit java-pkg eutils versionator
 
@@ -29,6 +29,7 @@ DEPEND=">=virtual/jdk-1.4
 S="${WORKDIR}/${PN}"
 
 pkg_setup() {
+	java-pkg_pkg_setup
 	enewgroup hsqldb
 	enewuser hsqldb -1 /bin/sh /dev/null hsqldb
 }
