@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/hsqldb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/ChangeLog,v 1.16 2006/07/22 22:02:17 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/ChangeLog,v 1.17 2006/09/14 19:34:47 nichoj Exp $
+
+  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> hsqldb-1.7.3.1-r1.ebuild,
+  hsqldb-1.7.3.1-r2.ebuild:
+  Added calls to java-pkg_pkg_setup, see bug #142708.
 
   22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
   hsqldb-1.7.3.1-r3.ebuild:
